--- a/index.html
+++ b/index.html
@@ -1,45 +1,55 @@
 <!DOCTYPE html>
-	<html lang="en">
+  <html lang="en">
     
     <head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<title> Nathan L. Worford </title>
-	</head>
-		<body>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <title> Nathan L. Worford </title>
+  </head>
+    <body>
 
-			<div class="container">
-				<div class="row"> <!--row 1-->
-					<div  class="col-xm-12 col-sm-12 col-md-8 col-lg-8">
-			   		 	<div class="page-header">
-						  <h1 style="text-align:center;"> Nathan L. Worford <small></small></h1>
-						</div>
-					</div>
+      <div class="container">
+        <div class="row"> <!--row 1-->
+          <div  class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+              <div class="page-header">
+              <h1 id="logo"> Nate W. <small></small></h1>
+              </div>
+          </div>
 
-					<div class="col-xm-12 col-sm-12 col-md-4 col-lg-4"> <!--nav-->
-						<nav class="navbar navbar-default navbar-static-top">
-							  <div class="nav" style="font-size:150%;">
-							   		<nav style="text-align:center;">
-								        <a href="index.html">About</a>
-								        <a href="contact.html">Contact</a>
-								        <a href="portfolio.html">Portfolio</a>
-								      </nav>
-							  </div> <!-- class="nav"-->
-						</nav>
-					</div>
-				</div> <!--row 1-->
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4"> <!--nav-->
+            <nav class="navbar navbar-default navbar-static-top">
+                <div class="nav" style="font-size:150%;">
+                    <nav style="text-align:center; ">
+                        <a href="index.html">About</a>
+                        	<span>|</span>
+                        <a href="contact.html">Contact</a>
+                        	<span>|</span>
+                        <a href="portfolio.html">Portfolio</a>
+                      </nav>
+                </div> <!-- class="nav"-->
+            </nav>
+          </div>
+        </div> <!--row 1-->
 
 				<div class="row"> <!--row 2-->
-					<div class="col-xm-12 col-sm-12 col-md-8 col-lg-8">
-						<div class="media-left">
-							 <img src="./assets/images/me-1.jpg" height="150" width="150" alt="Porfile Pic">
-						</div>
-						<div >
-					    	<p> Nathaniel Lloyd Worford is an American born man currently living in Denver, Colorado. A life-long artist and writer, Nathan lived in the capitol city of the Sichuan province in China, Chengdu from 2011 to 2015 where he studied Mandarin and taught English. In China, he met his beautiful wife, Luo Ran (骆冉), and discovered his love of both Chinese characters and teaching. Nathan and his wife moved to Colorado in the spring of 2014. Luo Ran (aka "Chive") recently gave birth to the couple's first child - Quinnly Annabelle Worford. Nathan is currently studying Web Development at the University of Denver, and his wife is pursuing a Masters of Accounting degree at Metro State College of Denver. </p>
-					    </div>
+					<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+						<section class="main-section">
+      						<h3>About Me</h3>
+      							<hr>
+								<div class="media-left">
+									<div  alt="Nathan L. Worford">
+									 <img class="img-responsive" src="./assets/images/me-1.jpg" alt="Porfile Pic">
+									</div>
+								</div>
+								<div >
+							    	<p> Nathaniel Lloyd Worford is an American born man currently living in Denver, Colorado. A life-long artist and writer, Nathan lived in the capitol city of the Sichuan province in China, Chengdu from 2011 to 2015 where he studied Mandarin and taught English. In China, he met his beautiful wife, Luo Ran (骆冉), and discovered his love of both Chinese characters and teaching. Nathan and his wife moved to Colorado in the spring of 2014. Luo Ran (aka "Chive") recently gave birth to the couple's first child - Quinnly Annabelle Worford. Nathan is currently studying Web Development at the University of Denver, and his wife is pursuing a Masters of Accounting degree at Metro State College of Denver. </p>
+							    </div>
+						</section>
 					</div>
 
-	 				<div class="col-xm-12 col-sm-12 col-md-4 col-lg-4">
+	 				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 	 					<h3 style="text-align:center"> Connect with me </h3>
 	 						<hr>
 	 						<div>
