--- a/contact.html
+++ b/contact.html
@@ -1,66 +1,91 @@
-<!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+  <html lang="en">
+    
+    <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title> Nathan L. Worford </title>
+  </head>
+    <body>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Contact | Nathan L. Worford</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
+      <div class="container">
+        <div class="row"> <!--row 1-->
+          <div  class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+              <div class="page-header">
+              <h1 id="logo"> Nate W. <small></small></h1>
+              </div>
+          </div>
 
-<body>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4"> <!--nav-->
+            <nav class="navbar navbar-default navbar-static-top">
+                <div class="nav" style="font-size:150%;">
+                    <nav style="text-align:center;">
+                        <a href="index.html">About</a>
+                          <span>|</span>
+                        <a href="contact.html">Contact</a>
+                          <span>|</span>
+                        <a href="portfolio.html">Portfolio</a>
+                      </nav>
+                </div> <!-- class="nav"-->
+            </nav>
+          </div>
+        </div> <!--row 1-->
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Nate W.</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="portfolio.html">Portfolio</a>
-      </nav>
-    </div>
-  </header>
+        <div class="row"> <!--row 2-->
+          <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+            <h3>Contact</h3>
+             <hr>
+            <form>
+                <div class="form-group">
+                  <label for="email">Name</label>
+                  <input type="email" class="form-control" id="email">
+                </div>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" id="email">
+                </div>
+                <div class="form-group">
+                  <label for="message">Message</label>
+                  <input type="message" class="form-control" id="message">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+              </form>
+          </div>
 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Contact</h1>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <h3 style="text-align:center"> Connect with me </h3>
+              <hr>
+              <div>
+                  <a href="https://www.linkedin.com/in/nathan-worford-bb1a55a5/" class="thumbnail">
+                    <img alt="Linkdin" src="./assets/images/Linkdin.png" height="50" width="50">
+                  </a>
+                  <a href="https://github.com/nworford" class="thumbnail">
+                    <img src="./assets/images/Git.png" alt="GitHub" height="50" width="50">
+                  </a>
+                  <a href="https://stackoverflow.com/users/8267633/nathan-w" class="thumbnail">
+                    <img src="./assets/images/stack-overflow.png" alt="stackoverflow" height="50" width="50">
+                  </a>
+              </div>
+           </div>
+        </div> <!--row 2-->
 
-      <form id="contact-form">
-        <ul>
-          <li>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
-          </li>
-          <li>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-          </li>
-          <li>
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required="required"></textarea>
-          </li>
-        </ul>
-        <input type="submit">
-      </form>
+      
 
-    </section>
+        <div class="row"> <!--row 3-->
+          <div class="panel panel-default" style="text-align:center;">
+              <div class="panel-body"> &copy; Copyright 2017 Nathan L. Worford</div>
+          </div>
+        </div> <!-- row 3-->
+      </div> <!-- class="container"-->
 
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
-
-        <a href="https://github.com/nworford" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/nathan-worford-bb1a55a5/" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/8267633/nathan-w"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-      </div>
-    </section>
-  </div>
-
-  <footer>
-    <div class="container">
-      Copyright &copy; 2017 Nathan L. Worford
-    </div>
-  </footer>
-</body>
-
+  </body>
 </html>
+
+
+
+
+
+
+
+,
