--- a/portfolio.html
+++ b/portfolio.html
@@ -1,74 +1,98 @@
-  <!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+  <html lang="en">
+    
+    <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title> Nathan L. Worford </title>
+  </head>
+    <body>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Portfolio | Nathan L. Worford</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
+      <div class="container">
+        <div class="row"> <!--row 1-->
+          <div  class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+              <div class="page-header">
+              <h1 id="logo"> Nate W. <small></small></h1>
+              </div>
+          </div>
 
-<body>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4"> <!--nav-->
+            <nav class="navbar navbar-default navbar-static-top">
+                <div class="nav" style="font-size:150%;">
+                    <nav style="text-align:center;">
+                        <a href="index.html">About</a>
+                          <span>|</span>
+                        <a href="contact.html">Contact</a>
+                          <span>|</span>
+                        <a href="portfolio.html">Portfolio</a>
+                      </nav>
+                </div> <!-- class="nav"-->
+            </nav>
+          </div>
+        </div> <!--row 1-->
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Nate W.</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="portfolio.html">Portfolio</a>
-      </nav>
-    </div>
-  </header>
+        <div class="row"> <!--row 2-->
+          <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+            <section class="main-section">
+                  <h3>Portfolio</h3>
+                    <hr>
+                      <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+                        <div class="work">
+                          <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Portfolio</h1>
+                          <h3>Hangman</h3>
+                        </div>
+                        <div class="work">
+                          <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
 
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+                          <h3>RPG Game</h3>
+                        </div>
+                        <div class="img-responsive" class="work">
+                          <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
-        <h3>Hangman</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+                          <h3>Trivia Game</h3>
+                        </div>
+                        <div class="work">
+                          <img class="img-responsive" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
-        <h3>RPG Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+                          <h3>Rutgers Info Widget</h3>
+                        </div>
+                        <div class="work">
+                          <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
-        <h3>Trivia Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+                          <h3>Rock Paper Scissors</h3>
+                        </div>
+                      </div>
 
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+              </section>
+          </div>
 
-        <h3>Rock Paper Scissors</h3>
-      </div>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <h3 style="text-align:center"> Connect with me </h3>
+              <hr>
+              <div>
+                  <a href="https://www.linkedin.com/in/nathan-worford-bb1a55a5/" class="thumbnail">
+                    <img alt="Linkdin" src="./assets/images/Linkdin.png" height="50" width="50">
+                  </a>
+                  <a href="https://github.com/nworford" class="thumbnail">
+                    <img src="./assets/images/Git.png" alt="GitHub" height="50" width="50">
+                  </a>
+                  <a href="https://stackoverflow.com/users/8267633/nathan-w" class="thumbnail">
+                    <img src="./assets/images/stack-overflow.png" alt="stackoverflow" height="50" width="50">
+                  </a>
+              </div>
+           </div>
+        </div> <!--row 2-->
 
-    </section>
+      
 
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
+        <div class="row"> <!--row 3-->
+          <div class="panel panel-default" style="text-align:center;">
+              <div class="panel-body"> &copy; Copyright 2017 Nathan L. Worford</div>
+          </div>
+        </div> <!-- row 3-->
+      </div> <!-- class="container"-->
 
-        <a href="https://github.com/nworford" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/nathan-worford-bb1a55a5/" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/8267633/nathan-w"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-      </div>
-    </section>
-  </div>
-
-  <footer>
-    <div class="container">
-      Copyright &copy; 2017 Nathan L. Worford
-    </div>
-  </footer>
-</body>
-
+  </body>
 </html>
