--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <div class="row"> <!--row 1-->
           <div  class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
               <div class="page-header">
-              <h1 id="logo"> Nate W. <small></small></h1>
+              <h1 id="logo"> N. Worford <small></small></h1>
               </div>
           </div>
 
@@ -36,7 +36,7 @@
 
         <div class="row main-content"> <!--row 2-->
           <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-            <h3>Contact</h3>
+            <h2>Contact</h2>
              <hr>
             <form>
                 <div class="form-group">
@@ -56,7 +56,7 @@
           </div>
 
           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <h2> Connect with me </h2>
+            <h2 id="connect"> Connect with me </h2>
               <hr>
               <div>
                   <a href="https://www.linkedin.com/in/nathan-worford-bb1a55a5/" class="thumbnail">
