--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row"> <!--row 1-->
           <div  class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
               <div class="page-header">
-              <h1 id="logo"> Nate W. <small></small></h1>
+              <h1 id="logo"> N. Worford <small></small></h1>
               </div>
           </div>
 
@@ -23,7 +23,7 @@
             <nav class="navbar navbar-default navbar-static-top">
                 <div class="nav">
                     <nav>
-                        <a href="index.html">About</a>
+                        <a  href="index.html">About</a>
                         	<span>|</span>
                         <a href="contact.html">Contact</a>
                         	<span>|</span>
@@ -37,7 +37,7 @@
 				<div class="row main-content"> <!--row 2-->
 					<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
 						<section class="main-section">
-      						<h3>About Me</h3>
+      						<h2>About Me</h2>
       							<hr>
       								<div class="row">
 										<div class="media-left">
@@ -46,22 +46,27 @@
 											</div>
 										</div>
 										<div >
-									    	<p> Nathaniel Lloyd Worford is an American born man currently living in Denver, Colorado. A life-long artist and writer, Nathan lived in the capitol city of the Sichuan province in China, Chengdu from 2011 to 2015 where he studied Mandarin and taught English. In China, he met his beautiful wife, Luo Ran (骆冉), and discovered his love of both Chinese characters and teaching. Nathan and his wife moved to Colorado in the spring of 2014. Luo Ran (aka "Chive") recently gave birth to the couple's first child - Quinnly Annabelle Worford. Nathan is currently studying Web Development at the University of Denver, and his wife is pursuing a Masters of Accounting degree at Metro State College of Denver. </p>
+									    	<p>Nathaniel Lloyd Worford is an American born man currently living in Denver, Colorado. He is an artist/author who is currently studying Web Development at the University of Denver. 
+									      </p>
+									      <p>Nathaniel (Nathan or Nate) was born in Evanston, Wyoming. He lived in Paris, France from age two to three, and St. Johns, Newfoundland, Canada, from age three to nine. He also lived in the capitol city of the Sichuan province in China (Chengdu) from 2011 to 2015 where he studied Mandarin and taught English. In China, he met his beautiful wife, Luo Ran (骆冉), and discovered his passions for both Chinese characters and teaching. Nate and his wife moved to Colorado in the Spring of 2015. After returning to Denver, Nate passed the HSK 5 (Mandarin proficiency test level 5 of 6), began teaching Mandarin, and self-published a children's book about the Chinese written language which he wrote and illustrated called "The Adventures of Zhui Ya". In March of 2017, Nate's wife Luo Ran (aka "Chive") gave birth to the couple's first child - a beautiful, healthy baby girl named Quinnly Annabelle Worford. 
+									      </p>
+									      <p>
+									      Nathan is currently studying Web Development at the University of Denver, and his wife is pursuing a Masters of Accounting degree at Metro State College of Denver. Nate is in the process of self-publishing a book called "Mindful Max:The First Day of School" which will be the first in a series of books intended to encourage children to practice mindfulness. Nate's art portfolio as well as links to his book websites can be found at <a href="https://www.nathanworford.com/" target="_blank"> nathanworford.com</a>  </p>
 									    </div>
 						</section>
 					</div>
 
 	 				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-	 					<h2> Connect with me </h2>
+	 					<h2  id="connect"> Connect with me </h2>
 	 						<hr>
 	 						<div>
-							    <a href="https://www.linkedin.com/in/nathan-worford-bb1a55a5/" class="thumbnail">
+							    <a href="https://www.linkedin.com/in/nathan-worford-bb1a55a5/" target="_blank" class="thumbnail">
 							      <img alt="Linkdin" src="./assets/images/Linkdin.png" height="50" width="50">
 							    </a>
-							    <a href="https://github.com/nworford" class="thumbnail">
+							    <a href="https://github.com/nworford" target="_blank" class="thumbnail">
 							      <img src="./assets/images/Git.png" alt="GitHub" height="50" width="50">
 							    </a>
-							    <a href="https://stackoverflow.com/users/8267633/nathan-w" class="thumbnail">
+							    <a href="https://stackoverflow.com/users/8267633/nathan-w" target="_blank" class="thumbnail">
 							      <img src="./assets/images/stack-overflow.png" alt="stackoverflow" height="50" width="50">
 							    </a>
 							</div>
