--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
         <div class="row"> <!--row 1-->
           <div  class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
               <div class="page-header">
-              <h1 id="logo"> Nate W. <small></small></h1>
+              <h1 id="logo"> N. Worford <small></small></h1>
               </div>
           </div>
 
@@ -37,7 +37,7 @@
         <div class="row main-content"> <!--row 2-->
           <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
             <section class="main-section">
-                  <h3>Portfolio</h3>
+                  <h2>Portfolio</h2>
                     <hr>
                       <div class="row">
                        
@@ -73,7 +73,7 @@
           </div>
 
           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <h2> Connect with me </h2>
+            <h2 id="connect"> Connect with me </h2>
               <hr>
               <div>
                   <a href="https://www.linkedin.com/in/nathan-worford-bb1a55a5/" class="thumbnail">
